--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,12 +28,14 @@
       src="https://kit.fontawesome.com/5bf56866c4.js"
       crossorigin="anonymous"
     ></script>
+    <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
       integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./src/assets/css/DataGrid.css" />
     <link rel="stylesheet" href="./src/assets/css/boostrap-social.css" />
     <link rel="stylesheet" href="./src/assets/css/homeStyles.css" />
     <link rel="stylesheet" href="./src/assets/css/styles.css" />
@@ -61,6 +63,7 @@
       integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
       crossorigin="anonymous"
     ></script>
+    <script src="./src/assets/js/script.js" defer></script>
   </head>
   <body>
     <div id="root"></div>
